--- a/homeworks/vladyslav.kovalov_kovalov/8-css-variables/styles.css
+++ b/homeworks/vladyslav.kovalov_kovalov/8-css-variables/styles.css
@@ -274,6 +274,11 @@
   padding: 4rem 0;
 }
 
+.footer-section__navigation {
+  font-size: 12px;
+  font-weight: 900;
+}
+
 .footer-section__logo {
   order: 1;
   margin-left: auto;
