--- a/homeworks/vladyslav.kovalov_kovalov/8-css-variables/styles.css
+++ b/homeworks/vladyslav.kovalov_kovalov/8-css-variables/styles.css
@@ -241,11 +241,23 @@
   content: "";
   position: absolute;
   top: 0;
-  left: 0;
+  left: -4rem;
   display: block;
-  background: url("icons/icons-sprite.svg#shield") center center no-repeat;
-  width: 50px;
-  height: 50px;
+  width: 60px;
+  height: 60px;
+  padding: 1rem;
+}
+
+.feature-item--1::before {
+  background: url("icons/shield-icon.png") center center no-repeat;
+}
+
+.feature-item--2::before {
+  background: url("icons/banknote-icon.png") center center no-repeat;
+}
+
+.feature-item--3::before {
+  background: url("icons/house-icon.png") center center no-repeat;
 }
 
 .feature-item__title {
